<resources>
    <string name="app_name">Popcorn Factory</string>
    <string name="welcome_message">Welcome to Popcorn Factory, home of the best series and movies. Just lay down, make some popcorn and enjoy!</string>
    <string name="button_start">Get me in!</string>
    <string name="series">Series</string>
    <string name="movies">Movies</string>
    <string name="seats">Seats</string>
    <string name="purchase_summary">Purchase summary</string>
    <string name="screen">Screen</string>
    <string name="available">Available</string>
    <string name="not_available">Not available</string>
    <string name="confirm">Confirm</string>
    <string name="your_selection">Your selection</string>
    <string name="buy_tickets">Buy my ticket!</string>
    <string name="name">Name</string>
    <string name="payment_method">Payment method</string>
    <string name="your_seat">Your seat</string>
    <string name="movie">Movie</string>
    <string name="almost_done">Almost done!</string>
    <string name="reservate">Reservate</string>
</resources>