<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".SeatSelectionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp">
        <TextView
            android:id="@+id/tvSeatsTitle"
            android:text="@string/seats"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/yellow"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_weight="3"
            android:layout_marginLeft="20dp"
            android:background="@color/yellow"/>
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/lytSeatsRows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioGroup
                android:id="@+id/rgSeatsRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/horizontalPaddingRadioGroup"
                android:layout_marginTop="@dimen/marginTopRadioGroup">
                <RadioButton
                    android:layout_width="@dimen/radioButton"
                    android:layout_height="@dimen/radioButton"
                    android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
                    android:text="1"
                    android:gravity="top|center"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/radioButtonText"
                    android:button="@color/transparent"
                    android:background="@drawable/radio_selectable"/>
                <RadioButton
                    android:layout_width="@dimen/radioButton"
                    android:layout_height="@dimen/radioButton"
                    android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
                    android:text="2"
                    android:gravity="top|center"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/radioButtonText"
                    android:button="@color/transparent"
                    android:background="@drawable/radio_selectable"/>
                <RadioButton
                    android:layout_width="@dimen/radioButton"
                    android:layout_height="@dimen/radioButton"
                    android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
                    android:text="3"
                    android:gravity="top|center"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/radioButtonText"
                    android:button="@color/transparent"
                    android:background="@drawable/radio_selectable"/>
                <RadioButton
                    android:layout_width="@dimen/radioButton"
                    android:layout_height="@dimen/radioButton"
                    android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
                    android:text="4"
                    android:gravity="top|center"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/radioButtonText"
                    android:button="@color/transparent"
                    android:background="@drawable/radio_selectable"/>
                <RadioButton
                    android:layout_width="@dimen/radioButton"
                    android:layout_height="@dimen/radioButton"
                    android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
                    android:text="5"
                    android:gravity="top|center"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/radioButtonText"
                    android:button="@color/transparent"
                    android:background="@drawable/radio_selectable"/>
            </RadioGroup>
            <RadioGroup
                android:id="@+id/rgSeatsRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/horizontalPaddingRadioGroup"
                android:layout_marginTop="@dimen/marginTopRadioGroup">
                <RadioButton
                    android:layout_width="@dimen/radioButton"
                    android:layout_height="@dimen/radioButton"
                    android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
                    android:text="6"
                    android:gravity="top|center"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/radioButtonText"
                    android:button="@color/transparent"
                    android:background="@drawable/radio_selectable"/>
                <RadioButton
                    android:layout_width="@dimen/radioButton"
                    android:layout_height="@dimen/radioButton"
                    android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
                    android:text="7"
                    android:gravity="top|center"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/radioButtonText"
                    android:button="@color/transparent"
                    android:background="@drawable/radio_selectable"/>
                <RadioButton
                    android:layout_width="@dimen/radioButton"
                    android:layout_height="@dimen/radioButton"
                    android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
                    android:text="8"
                    android:gravity="top|center"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/radioButtonText"
                    android:button="@color/transparent"
                    android:background="@drawable/radio_selectable"/>
                <RadioButton
                    android:layout_width="@dimen/radioButton"
                    android:layout_height="@dimen/radioButton"
                    android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
                    android:text="9"
                    android:gravity="top|center"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/radioButtonText"
                    android:button="@color/transparent"
                    android:background="@drawable/radio_selectable"/>
                <RadioButton
                    android:layout_width="@dimen/radioButton"
                    android:layout_height="@dimen/radioButton"
                    android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
                    android:text="10"
                    android:gravity="top|center"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/radioButtonText"
                    android:button="@color/transparent"
                    android:background="@drawable/radio_selectable"/>
            </RadioGroup>
            <RadioGroup
                android:id="@+id/rgSeatsRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/horizontalPaddingRadioGroup"
                android:layout_marginTop="@dimen/marginTopRadioGroup">
                <RadioButton
                    android:layout_width="@dimen/radioButton"
                    android:layout_height="@dimen/radioButton"
                    android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
                    android:text="11"
                    android:gravity="top|center"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/radioButtonText"
                    android:button="@color/transparent"
                    android:background="@drawable/radio_selectable"/>
                <RadioButton
                    android:layout_width="@dimen/radioButton"
                    android:layout_height="@dimen/radioButton"
                    android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
                    android:text="12"
                    android:gravity="top|center"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/radioButtonText"
                    android:button="@color/transparent"
                    android:background="@drawable/radio_selectable"/>
                <RadioButton
                    android:layout_width="@dimen/radioButton"
                    android:layout_height="@dimen/radioButton"
                    android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
                    android:text="13"
                    android:gravity="top|center"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/radioButtonText"
                    android:button="@color/transparent"
                    android:background="@drawable/radio_selectable"/>
                <RadioButton
                    android:layout_width="@dimen/radioButton"
                    android:layout_height="@dimen/radioButton"
                    android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
                    android:text="14"
                    android:gravity="top|center"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/radioButtonText"
                    android:button="@color/transparent"
                    android:background="@drawable/radio_selectable"/>
                <RadioButton
                    android:layout_width="@dimen/radioButton"
                    android:layout_height="@dimen/radioButton"
                    android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
                    android:text="15"
                    android:gravity="top|center"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/radioButtonText"
                    android:button="@color/transparent"
                    android:background="@drawable/radio_selectable"/>
            </RadioGroup>
            <RadioGroup
                android:id="@+id/rgSeatsRow4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/horizontalPaddingRadioGroup"
                android:layout_marginTop="@dimen/marginTopRadioGroup">
                <RadioButton
                    android:layout_width="@dimen/radioButton"
                    android:layout_height="@dimen/radioButton"
                    android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
                    android:text="16"
                    android:gravity="top|center"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/radioButtonText"
                    android:button="@color/transparent"
                    android:background="@drawable/radio_selectable"/>
                <RadioButton
                    android:layout_width="@dimen/radioButton"
                    android:layout_height="@dimen/radioButton"
                    android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
                    android:text="17"
                    android:gravity="top|center"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/radioButtonText"
                    android:button="@color/transparent"
                    android:background="@drawable/radio_selectable"/>
                <RadioButton
                    android:layout_width="@dimen/radioButton"
                    android:layout_height="@dimen/radioButton"
                    android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
                    android:text="18"
                    android:gravity="top|center"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/radioButtonText"
                    android:button="@color/transparent"
                    android:background="@drawable/radio_selectable"/>
                <RadioButton
                    android:layout_width="@dimen/radioButton"
                    android:layout_height="@dimen/radioButton"
                    android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
                    android:text="19"
                    android:gravity="top|center"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/radioButtonText"
                    android:button="@color/transparent"
                    android:background="@drawable/radio_selectable"/>
                <RadioButton
                    android:layout_width="@dimen/radioButton"
                    android:layout_height="@dimen/radioButton"
                    android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
                    android:text="20"
                    android:gravity="top|center"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/radioButtonText"
                    android:button="@color/transparent"
                    android:background="@drawable/radio_selectable"/>
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:background="@color/letra_gris_claro"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="50dp"
        android:textSize="23sp"
        android:textStyle="italic"
        android:text="@string/screen"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/symbols"
            android:layout_height="@dimen/symbols"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_seat_available"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/available"
            android:textColor="@color/gray"
            android:layout_marginLeft="5dp"
            android:textSize="16sp"/>

        <ImageView
            android:layout_width="@dimen/symbols"
            android:layout_height="@dimen/symbols"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_seat_notavailable"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/not_available"
            android:textColor="@color/gray"
            android:layout_marginLeft="5dp"
            android:textSize="16sp"/>

        <ImageView
            android:layout_width="@dimen/symbols"
            android:layout_height="@dimen/symbols"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_seat_selected"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/your_selection"
            android:textColor="@color/gray"
            android:layout_marginLeft="5dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="70dp"
        android:background="@drawable/round_button"
        android:textColor="@color/black"
        android:text="@string/confirm"/>

</LinearLayout>